--- a/src/public/css/header.scss
+++ b/src/public/css/header.scss
@@ -5,23 +5,17 @@ header {
     align-items: center;
     justify-content: space-between;
     box-shadow: 0 2px 10px -2px rgba(0, 0, 0, 0.1);
-    @media (max-width: 768px) {
-        flex-wrap: wrap;
-    }
 }
 
 .search-bar {
     display: flex;
     min-width: 40%;
     max-width: 100%;
-
-    @media (max-width: 768px) {
-        min-width: 100%;
-    }
+    background: rgba(0, 0, 0, 0.05);
+    border-radius: 5px;
 
     input {
-        background: rgba(0, 0, 0, 0.05);
-        border-radius: 5px 0 0 5px;
+        background: transparent;
         border: none;
         padding: 0.75em 1.25em;
         font-size: 1em;
@@ -29,13 +23,17 @@ header {
     }
 
     button {
-        background: $primary-color;
+        background: transparent;
         border: none;
-        border-radius: 0 5px 5px 0;
-        padding: 0.75em 1.25em;
+        padding: 0.75em 1em;
         color: #fff;
         font-weight: 500;
         font-size: 1em;
         cursor: pointer;
+        display: flex;
+
+        i {
+            color: #5a5a5a;
+        }
     }
 }
