--- a/src/public/css/header.scss
+++ b/src/public/css/header.scss
@@ -8,16 +8,32 @@ header {
 }
 
 .search-bar {
+    position: relative;
     display: flex;
     min-width: 40%;
     max-width: 100%;
     background: rgba(0, 0, 0, 0.05);
     border-radius: 5px;
 
+    #clear-search {
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        align-self: stretch;
+        display: none;
+        align-items: center;
+        padding: 0.5em;
+        cursor: pointer;
+        i {
+            color: #7a7a7a;
+        }
+    }
+
     input {
         background: transparent;
         border: none;
-        padding: 0.75em 1.25em;
+        padding: 0.75em 1.25em 0.75em 2.5em;
         font-size: 1em;
         flex: 1;
     }
