--- a/src/public/css/header.scss
+++ b/src/public/css/header.scss
@@ -5,6 +5,10 @@ header {
     align-items: center;
     justify-content: space-between;
     box-shadow: 0 2px 10px -2px rgba(0, 0, 0, 0.1);
+
+    h1 {
+        margin: 0.5em 0;
+    }
 }
 
 .search-bar {
