--- a/src/public/css/responsive.scss
+++ b/src/public/css/responsive.scss
@@ -1,3 +1,8 @@
+@media (min-width: 768px) {
+    header {
+        height: 80px;
+    }
+}
 @media (max-width: 768px) {
     header {
         flex-wrap: wrap;
